# GambitFruit

./: CMakeLists.txt  Makefile  README  README.md  attack.cpp  attack.h  bitbases.cpp  bitbases.h  board.cpp  board.h  book.cpp  book.h  colour.h  eval.cpp  eval.h  fen.cpp  fen.h  hash.cpp  hash.h  list.cpp  list.h  main.cpp  material.cpp  material.h  move.cpp  move.h  move_check.cpp  move_check.h  move_do.cpp  move_do.h  move_evasion.cpp  move_evasion.h  move_gen.cpp  move_gen.h  move_legal.cpp  move_legal.h  option.cpp  option.h  pawn.cpp  pawn.h  (+31 more)
GambitFruit/: CMakeLists.txt  attack.cpp  attack.h  board.cpp  board.h  book.cpp  colour.h  eval.cpp  eval.h  fen.cpp  hash.cpp  hash.h  list.cpp  list.h  material.cpp  material.h  move.cpp  move_check.cpp  move_check.h  move_do.cpp  move_do.h  move_evasion.cpp  move_evasion.h  move_gen.cpp  move_gen.h  move_legal.cpp  option.cpp  option.h  pawn.cpp  pawn.h  piece.cpp  piece.h  posix.cpp  posix.h  protocol.cpp  protocol.h  pst.cpp  pst.h  pv.cpp  random.cpp  (+20 more)
epd-extractor/: CMakeLists.txt  README.md  main.cpp
tmo/: CMakeLists.txt  README.md  engine_connector.cpp  engine_connector.h  hill_climbing.cpp  hill_climbing.h  main.cpp  texel_optimizer.cpp  texel_optimizer.h
